# platformer-sandbox

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  grid.c  grid.h  main.c  mathutils.c  mathutils.h  noise.c  noise.h  player.c  player.h  terrain.c  terrain.h
